--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.1.3",
     "framer-motion": "^10.0.1",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.2",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
