--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "dotenv": "^16.1.3",
     "framer-motion": "^10.0.1",
     "mongodb": "^5.6.0",
