--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "axios": "^1.4.0",
     "dotenv": "^16.1.3",
     "framer-motion": "^10.0.1",
+    "jsdom": "^22.1.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
     "next": "13.1.1",
     "next-themes": "^0.2.1",
+    "puppeteer": "^21.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-simple-typewriter": "^5.0.1",
